# cpp-currency-converter

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
include/api/: ExchangeApi.hpp
include/core/: Currency.hpp  ExchangeRate.hpp
include/gui/: mainwindow.h
include/utils/: ConfigManager.hpp
resources/: resources.qrc
src/api/: ExchangeApi.cpp
src/core/: Currency.cpp  ExchangeRate.cpp
src/gui/: mainwindow.cpp  mainwindow.ui
src/utils/: ConfigManager.cpp
